Prodwork/atefwork/PRODUCTION/bankinglab/flowable-bankerise-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flowable-dev
  namespace: ns-prx-9
spec:
  ingressClassName: nginx-dev
  rules:
    - host: flowable.dev.proxym-it.tn
      http:
        paths:
          - backend:
              service:
                name: flowable-dev
                port:
                  number: 8080
            path: /
            pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flowable-qa
  namespace: ns-prx-9
spec:
  ingressClassName: nginx-qa
  rules:
    - host: flowable.qa.proxym-it.tn
      http:
        paths:
          - backend:
              service:
                name: flowable-qa
                port:
                  number: 8080
            path: /
            pathType: Prefix
