Prodwork/atefwork/PRODUCTION/bankinglab/keycloack-banking-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  namespace: ns-prx-9
spec:
  ingressClassName: nginx-demo
  rules:
    - host: bankerise-keycloak.demo.proxym-it.tn
      http:
        paths:
   #       - backend:
    #          service:
     #           name: keycloak-http
      #          port:
       #           number: 8080
        #    path: /
         #   pathType: Prefix
          - backend:
              service:
                name: keycloak-http
                port:
                  number: 9990
            path: /manager/
            pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    nginx.org/location-snippets: |
      proxy_set_header X-Forwarded-For $host;
      proxy_set_header X-Forwarded-Proto $scheme;
      proxy_set_header Upgrade $http_upgrade;
      proxy_set_header Connection ‘upgrade’;
      proxy_set_header Host $host;
  name: keycloak-2
  namespace: ns-prx-9
spec:
  ingressClassName: nginx-demo
  rules:
    - host: bankerise-keycloak.demo.proxym-it.net
      http:
        paths:
          - backend:
              service:
                name: keycloak-http
                port:
                  number: 80
            path: /
            pathType: Prefix
